--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ repositories {
 dependencies {
   api 'com.squareup.retrofit2:retrofit:2.4.0'
   api 'org.jetbrains.kotlin:kotlin-stdlib:1.3.0'
-  api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.26.1-eap13'
+  api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
 
   testImplementation 'junit:junit:4.12'
   testImplementation 'com.squareup.okhttp3:mockwebserver:3.11.0'
